[package]
name = "attia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
fantoccini = "0.19.3"
http = "0.2"
futures-util = "0.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
thiserror = "1.0.39"
async-trait = "0.1.66"
sha2 = "0.10.6"
base16ct = { version = "0.2.0", features = ["alloc"] }
tantivy = "0.19.2"
tempdir = "0.3.7"
scraper = "0.15.0"
clap = { version = "4.1.8", features = ["derive"] }
toml = "0.7.3"
serde = "1.0.156"
dirs = "4.0.0"
bytes = { version = "1.4.0", features = ["serde"] }
serde_json = "1.0.94"
